IJPL-207781 Support "Paste From History" in the terminal window
Signed-off-by: Dmitry Batkovich <dmitry.batkovich@jetbrains.com>

GitOrigin-RevId: 1168c885296d8cbd5d56966cc436afa06412d742